@@ -20,10 +20,6 @@ import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse.BodyHandlers;
 import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipException;
 import java.util.zip.ZipInputStream;
@@ -101,9 +97,7 @@ public class AgentStartup implements Runnable {
             String jvmArgs = AmazonUtil.getUserDataAsMap().get(TankConstants.KEY_JVM_ARGS);
             logger.info("Starting apiharness with command: {} {} {}",
                     API_HARNESS_COMMAND, controllerArg, jvmArgs);
-            List<String> command = Stream.of(API_HARNESS_COMMAND, controllerArg).collect(Collectors.toList());
-            command.addAll(Arrays.asList((jvmArgs).split("\\s+")));
-            new ProcessBuilder(command).start();
+            Runtime.getRuntime().exec(API_HARNESS_COMMAND + controllerArg + " " + jvmArgs);
         } catch (ConnectException ce) {
             logger.error("Error creating connection to {} : this is normal during the bake : {}",
                     controllerBaseUrl, ce.getMessage());
